[package]
name = "redis-server-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
chan = "0.1.23"
chan-signal = "0.3.3"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
wasmedge-sdk = {git = "https://github.com/oss-fun/wasmedge-rust-sdk.git", branch = "v0.9.0"}
